# orbit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
agents/: foundation.md
src/: cli.rs  config.rs  config_wizard.rs  error.rs  events.rs  git.rs  git_worktree.rs  lib.rs  main.rs  orchestrator.rs  prompts.rs  render.rs  report.rs  tool_format.rs  types.rs
src/harness/: acp.rs  claude.rs  fake.rs  mod.rs
