[package]
name = "orbit"
version = "0.2.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.14"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
chrono = "0.4"
